added asphalt proxy instead of IN (compatibility issues)

--- a/main.html
+++ b/main.html
@@ -96,7 +96,7 @@ align-items: center;
 		window.location.href = "./games.html"
 		}
 	if (area == "star") {
-		window.location.href = './star.html'
+		window.location.href = './star/index.html'
 		}
 	if (area == 'resources') 
 		{
