--- a/star/index.html
+++ b/star/index.html
@@ -38,6 +38,20 @@
         cursor: pointer;
         border-radius: 200px;
     }
+    .button_home {
+
+        background-color: #000000;
+        border: none;
+        color: rgb(255, 255, 255);
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 200px;
+        float: right;
+    }
   
   </style>
   <div class="container">
@@ -66,5 +80,6 @@
   <button class = 'button' onclick=Redir("./SHS.html")>Search history spammer</button>
   <button class = 'button' onclick='create_blnkr()'>About:blank cloaker</button>
   <button class = "button" onclick="Redir('./Clockwork.html')">ClockworkOS</button>
+  <button class ="button_home" onclick="Redir('../main.html')">Home</button>
 </head>
 </html>
