compleatly filled out site, games will be addded later

--- a/games.html
+++ b/games.html
@@ -11,10 +11,14 @@
     <a href="./games/retrobowl.html">Retro Bowl</a>
     <br>
     <a href="./games/cookieclicker/index.html">Cookie clicker</a> 
-    
+	<br>
+	<a href="./games/krunker/index.html">Krunker.io</a>
+	<br>
+	<a href="./games/2048.html">2048</a>
 </body>
 <head>
     <script>
+        
     </script>
     <style>
 
