--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ align-items: center;
 		window.location.href= './resources.html'
 		}
 	if (area == 'home') {
-		window.location.href = './main.html'
+		window.location.href = './index.html'
 		}
 	if (area == 'about') {window.location.href = './about.html'}
 	if (area == 'news') {window.location.href = './news.html'}
