--- a/star/index.html
+++ b/star/index.html
@@ -80,6 +80,6 @@
   <button class = 'button' onclick=Redir("./SHS.html")>Search history spammer</button>
   <button class = 'button' onclick='create_blnkr()'>About:blank cloaker</button>
   <button class = "button" onclick="Redir('./Clockwork.html')">ClockworkOS</button>
-  <button class ="button_home" onclick="Redir('../main.html')">Home</button>
+  <button class ="button_home" onclick="Redir('../index.html')">Home</button>
 </head>
 </html>
