addded some games

--- a/games.html
+++ b/games.html
@@ -15,6 +15,10 @@
 	<a href="./games/krunker/index.html">Krunker.io</a>
 	<br>
 	<a href="./games/2048.html">2048</a>
+    <br>
+    <a href="./games/Terraria.html">Terraria</a>
+    <br>
+    <a href="./games/TerrariaMP.html">Terraria Multiplayer </a>
 </body>
 <head>
     <script>
