made krunker sorta work. It is an iframe so it will be blocked for most

--- a/games/krunker/index.html
+++ b/games/krunker/index.html
@@ -1,3 +1,1 @@
-This is currently broken, as Ultraviolet does not load correctly on UV and get requests dont work for some reason
-<br>
-This should be fixed soon, come back later.
+<iframe src="https://krunker.io" height=100% width=100%></iframe>
