--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #2c2c2c;
+            color: #f4f4f4;
         }
 
         div#banner {
@@ -44,21 +44,23 @@
         }
 
         .button_navigation {
-            background-color: #007BFF;
+            background-color: #4a4a4a;
             border: none;
-            color: #fff;
+            color: #f4f4f4;
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
-            font-size: 16px;
-            margin: 4px 10px;
+            font-size: 18px;
+            margin: 10px;
             cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .button_navigation:hover {
-            background-color: #0056b3;
+            background-color: #6a6a6a;
+            transform: translateY(-2px);
         }
 
         .button_container {
@@ -67,8 +69,7 @@
             align-items: center;
             flex-wrap: wrap;
             padding: 20px 0;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: #2c2c2c;
             margin-bottom: 20px;
         }
 
