added banner to games

--- a/games.html
+++ b/games.html
@@ -1,5 +1,36 @@
 <html>
 <body>
+<style>
+	.divgames {
+		margin-left: auto;
+		margin-right: auto;
+		max-width: fit-content;
+	}
+	div#banner {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: #000000;
+	width: 100%;
+	z-index: 1000;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        div#banner-content {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 10px;
+            color: white;
+            text-align: center;
+            font-size: 20px;
+        }
+
+</style>
+<br>
+<br>
+<br>
+	<div class = divgames>
     <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>
     <br>
     <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a>
@@ -19,6 +50,12 @@
     <a href="./games/Terraria.html">Terraria</a>
     <br>
     <a href="./games/TerrariaMP.html">Terraria Multiplayer </a>
+	</div>
+	    <div id="banner">
+        <div id="banner-content">
+            RCKSTR - The best games hub for school
+        </div>
+    </div>
 </body>
 <head>
     <script>
