fixed star (hopefully)

--- a/star/index.html
+++ b/star/index.html
@@ -38,20 +38,6 @@
         cursor: pointer;
         border-radius: 200px;
     }
-    .button_home {
-
-        background-color: #000000;
-        border: none;
-        color: rgb(255, 255, 255);
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        border-radius: 200px;
-        float: right;
-    }
   
   </style>
   <div class="container">
@@ -59,7 +45,7 @@
       
       Asphalt
     </h1>
-    <p class="description">Made by theskid22 on github</p>
+    <p class="description">An ultraviolet based proxy</p>
     <input type="text" class="input" placeholder="Enter a search query or URL">
   </div>
 
@@ -77,9 +63,7 @@
 </body>
 <head>
   <button class = 'button' onclick=Redir("./exploits.html")>Exploits</button>
-  <button class = 'button' onclick=Redir("./SHS.html")>Search history spammer</button>
   <button class = 'button' onclick='create_blnkr()'>About:blank cloaker</button>
   <button class = "button" onclick="Redir('./Clockwork.html')">ClockworkOS</button>
-  <button class ="button_home" onclick="Redir('../index.html')">Home</button>
 </head>
 </html>
