added background image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>RCKSTR x EthanDupe</title>
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <style type="text/css" media="screen">
+        *{
+            background-image: url('images/RCKSTR.png');
+            background-size: cover; /* Ensures the image covers the whole page */
+            background-position: center; /* Centers the image */
+            background-repeat: no-repeat; /* Prevents the image from repeating */
+        }
+    
         * {
             margin: 0;
             padding: 0;
