--- a/star/index.html
+++ b/star/index.html
@@ -45,7 +45,7 @@
       
       Asphalt
     </h1>
-    <p class="description">An ultraviolet based proxy</p>
+    <p class="description">Made by theskid22 on github</p>
     <input type="text" class="input" placeholder="Enter a search query or URL">
   </div>
 
