--- a/news.html
+++ b/news.html
@@ -94,7 +94,9 @@
 		<div>
 			Update log: 
 			<br>
-			RCKSTR html port finished (5/26/24)
+			Made the banner universal and made dark mode by default. (5/26/24)
+			<br>
+			RCKSTR html port finished (5/25/24)
 			
 		</div>
     </div>
