--- a/index.html
+++ b/index.html
@@ -88,14 +88,17 @@ align-items: center;
 <body>
 <br>
 
-<div class='button_container'>
-<button onclick="goto('games')" class = 'button_navigation'>Games</button>
-<button onclick='goto("home")'  class = 'button_navigation' >Home </button>
-<button onclick='goto("star")'  class = 'button_navigation' >Star</button>
-<button onclick='goto("about")'  class = 'button_navigation' >About </button>
-<button onclick='goto("news")'  class = 'button_navigation' >News</button>
-<button onclick='goto("discord")'  class = 'button_navigation' >Discord</button>
-<button onclick='goto("ethandupe")' class='button_navigation'>Ethandupe</button>
+
+    <div class="button_container">
+        <button onclick="goto('games')" class="button_navigation">Games</button>
+        <button onclick="goto('home')" class="button_navigation">Home</button>
+        <button onclick="goto('star')" class="button_navigation">Star</button>
+        <button onclick="goto('about')" class="button_navigation">About</button>
+        <button onclick="goto('news')" class="button_navigation">News</button>
+        <button onclick="goto('discord')" class="button_navigation">Discord</button>
+        <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
+    </div>
+
 
 </div>
 <br>
