--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>RCKSTR x EthanDupe</title>
-	  <link rel="icon" type="image/x-icon" href="logo.ico">
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <style type="text/css" media="screen">
-      * {
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
         }
-     body {
+        body {
             background-color: #2c2c2c;
             color: #f4f4f4;
         }
-     div#banner { 
-       position: absolute; 
-       top: 0; 
-       left: 0; 
-       background-color: #000000; 
-       width: 100%; 
-     }
-     div#banner-content {
+        div#banner { 
+            position: absolute; 
+            top: 0; 
+            left: 0; 
+            background-color: #000000; 
+            width: 100%; 
+        }
+        div#banner-content {
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
@@ -29,17 +30,26 @@
             text-align: center;
             font-size: 20px;
         }
-
         div#main-content {
             padding-top: 70px;
             text-align: center;
             padding: 20px;
         }
-
+        .button_container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 20px 0;
+            background: linear-gradient(45deg, #FFD700, #000);
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            margin-bottom: 20px;
+        }
         .button_navigation {
-            background-color: #4a4a4a;
+            background-color: #000;
             border: none;
-            color: #f4f4f4;
+            color: #FFD700;
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
@@ -47,48 +57,31 @@
             margin: 10px;
             cursor: pointer;
             border-radius: 12px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
         .button_navigation:hover {
-            background-color: #6a6a6a;
-            transform: translateY(-2px);
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
         }
-
-        .button_container {
+        .intro_container {
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
-            padding: 20px 0;
-            background-color: #2c2c2c;
-            margin-bottom: 20px;
         }
-.intro_container {
-display: flex;
-justify-content: center;
-align-items: center;
-}
-.offerings_container {
-display:flex;
-justify-content: center;
-align-items: center;
-}
+        .offerings_container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
-
 <body>
-  <div id="banner">
-    <div id="banner-content">
-		RCKSTR - The best games hub for school 
+    <div id="banner">
+        <div id="banner-content">
+            RCKSTR - The best games hub for school 
+        </div>
     </div>
-  </div>
-</body>
-<body>
-<br>
-
-
     <div class="button_container">
         <button onclick="goto('games')" class="button_navigation">Games</button>
         <button onclick="goto('home')" class="button_navigation">Home</button>
@@ -98,26 +91,15 @@ align-items: center;
         <button onclick="goto('discord')" class="button_navigation">Discord</button>
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
-
-
-</div>
-<br>
-<br>
-<div class="intro_container">
-<h1 style="font-size: 30px";> Welcome to RCKSR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
-</div>
-<br>
-<div class="offerings_container">
-<p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!<p>
-</div>
-<br>
-<br>
-<p style="font-size: 35px; display:flex; justify-content: center; align-items: center;">Email: rckstr@altmails.com</p>
-<br>
-<p style="font-size: 35px; display:flex; justify-content: center; align-items: center;">Discord: https://discord.gg/2Fw5sz9MQs</p>
-
+    <div class="intro_container">
+        <h1 style="font-size: 30px;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+    </div>
+    <div class="offerings_container">
+        <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
+    </div>
+    <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Email: rckstr@altmails.com</p>
+    <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Discord: <a href="https://discord.gg/2Fw5sz9MQs" style="color: #FFD700;">https://discord.gg/2Fw5sz9MQs</a></p>
+    <script src="./scripts/navigation.js"></script>
 </body>
-<head>
-<script src="./scripts/navigation.js"></script>
-</head>
 </html>
+
