--- a/index.html
+++ b/index.html
@@ -5,6 +5,85 @@
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <style type="text/css" media="screen">
         /* Insert the updated CSS here */
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    background-color: #2c2c2c;
+    color: #f4f4f4;
+}
+
+div#banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    width: 100%;
+}
+
+div#banner-content {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+
+div#main-content {
+    padding-top: 70px;
+    text-align: center;
+    padding: 20px;
+}
+
+.button_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 40px 0; /* Increased padding at the top */
+    background: linear-gradient(45deg, #FFD700, #000);
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+}
+
+.button_navigation {
+    background-color: #000;
+    border: 4px solid #FFD700; /* Increased border size */
+    color: #FFD700;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 12px;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.button_navigation:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
+}
+
+.intro_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.offerings_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
     </style>
 </head>
 <body>
