--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div#main-content {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px 0; /* Increased padding at the top */
+    padding: 25px 25px; /* Increased padding at the top */
     background: linear-gradient(45deg, #FFD700, #000);
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
