--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ div#main-content {
 
 .button_navigation:hover {
     transform: scale(1.05);
+       background: linear-gradient(45deg, #000, #FFD700);
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
 }
 
