--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ div#main-content {
 .button_navigation {
     background-color: #000;
     border: 4px solid #FFD700; /* Increased border size */
-    color: #FFD700;
+     background: linear-gradient(45deg, #000, #FFD700);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
