--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@ div#main-content {
     background-color: #000;
     border: 4px solid #FFD700; /* Increased border size */
      background: linear-gradient(45deg, #000, #FFD700);
-    padding: 15px 32px;
+    padding: 15px 32px; 
     text-align: center;
     text-decoration: none;
     font-size: 18px;
+    font-color: #ffff;
     margin: 10px;
     cursor: pointer;
     border-radius: 12px;
