--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@ div#main-content {
 </head>
 <body>
     <div class="button_container">
-        <button onclick="goto('games')" class="button_navigation">Games</button>
+        <font color="white">
         <button onclick="goto('home')" class="button_navigation">Home</button>
+        <button onclick="goto('games')" class="button_navigation">Games</button>
         <button onclick="goto('star')" class="button_navigation">Star</button>
         <button onclick="goto('about')" class="button_navigation">About</button>
         <button onclick="goto('news')" class="button_navigation">News</button>
