change hover to white text

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ div#main-content {
 }
 
 .button_navigation:hover {
+    font-color:"white"
     transform: scale(1.05);
       
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
@@ -72,7 +73,6 @@ div#main-content {
 </head>
 <body>
     <div class="button_container">
-        <font color="white">
         <button onclick="goto('home')" class="button_navigation">Home</button>
         <button onclick="goto('games')" class="button_navigation">Games</button>
         <button onclick="goto('star')" class="button_navigation">Star</button>
@@ -82,6 +82,7 @@ div#main-content {
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
     <div class="intro_container">
+
         <h1 style="font-size: 30px;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
     <div class="offerings_container">
