--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ div#main-content {
 .button_navigation {
     background-color: #000;
     border: 4px solid #FFD700; /* Increased border size */
-     background: linear-gradient(45deg, #000, #FFD700);
     padding: 15px 32px; 
     text-align: center;
     text-decoration: none;
     font-size: 18px;
+    font-color: "black"
     margin: 10px;
     cursor: pointer;
     border-radius: 12px;
@@ -52,7 +52,8 @@ div#main-content {
 }
 
 .button_navigation:hover {
-    font-color:"white"
+    background: linear-gradient(45deg, #000, #FFD700);
+    font-color:"white";
     transform: scale(1.05);
       
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
