--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ div#main-content {
 }
 
 .button_navigation {
-    background-color: #000;
+    background-color: #666; /* Grey background */
     border: 4px solid #FFD700; /* Increased border size */
     padding: 15px 32px; 
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-    font-color: "black"
+    color: black; /* Changed from font-color */
     margin: 10px;
     cursor: pointer;
     border-radius: 12px;
@@ -53,11 +53,11 @@ div#main-content {
 
 .button_navigation:hover {
     background: linear-gradient(45deg, #000, #FFD700);
-    font-color:"white";
+    color: white; /* Changed from font-color */
     transform: scale(1.05);
-      
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
 }
+
 
 .intro_container {
     display: flex;
