Update index.html to make buttons look better

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ div#main-content {
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-    color: black; /* Changed from font-color */
+    color: grey; /* Changed from font-color */
     margin: 10px;
     cursor: pointer;
     border-radius: 12px;
