--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ div#main-content {
 }
 
 .button_navigation {
-    background-color: #666; /* Grey background */
+    background-color: black; /* Grey background */
     border: 4px solid #FFD700; /* Increased border size */
     padding: 15px 32px; 
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-    color: grey; /* Changed from font-color */
+    color: white; /* Changed from font-color */
     margin: 10px;
     cursor: pointer;
     border-radius: 12px;
