--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: #2c2c2c;
+    background-color: black; /*changed, old was tacky*/
     color: #f4f4f4;
 }
 
@@ -37,7 +37,7 @@ div#main-content {
 }
 
 .button_navigation {
-    background-color: black; /* Grey background */
+    background-color: black; /* black background */
     border: 4px solid #FFD700; /* Increased border size */
     padding: 15px 32px; 
     text-align: center;
@@ -82,8 +82,7 @@ div#main-content {
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
     <div class="intro_container">
-
-        <h1 style="font-size: 30px;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+        <h1 style="font-size: 30px;" align="center">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
     <div class="offerings_container">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
