--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ div#main-content {
 
 .button_navigation {
     background-color: black; /* black background */
-    border: 4px solid #FFD700; /* Increased border size */
+    border: 2px solid #FFD700; /* Increased border size */
     padding: 15px 32px; 
+    color: white;
     text-align: center;
     text-decoration: none;
     font-size: 18px;
