--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ div#main-content {
     border: 2px solid #FFD700; /* Increased border size */
     padding: 15px 32px; 
     text-align: center;
+    color: white;
     text-decoration: none;
     font-size: 18px;
     margin: 10px;
