--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ div#main-content {
     <div class="intro_container">
         <h1 style="font-size: 30px;" align="center">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
-    <spacer> </spacer>
+         <body>
+      Create some space <spacer type = "block" width = "50" /> here.
+   </body>
     <div class="offerings_container">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
     </div>
