trying to add spacer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ div#main-content {
         <h1 style="font-size: 30px;" align="center">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
          <body>
-      Create some space <spacer type = "block" width = "50" /> here.
+<div width=10%></div>
    </body>
     <div class="offerings_container">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
