--- a/index.html
+++ b/index.html
@@ -84,11 +84,9 @@ div#main-content {
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
     <div class="intro_container">
-        <h1 style="font-size: 30px;" align="center">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+        <h1 style="font-size: 30px;" align="center;" margin-bottom="3cm;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
          <body>
-<div width=10%></div>
-   </body>
     <div class="offerings_container">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
     </div>
