--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ div#main-content {
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
     <div class="intro_container">
-        <h1 style="font-size: 30px;" align="center;" margin-bottom="3cm;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+        <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
     </div>
          <body>
     <div class="offerings_container">
