--- a/news.html
+++ b/news.html
@@ -95,6 +95,8 @@
 		<div>
 			Update log: 
 			<br>
+			Made the themes reflect the RCKSTR logo (5/29/24)
+			<br>
 			Made the banner universal and made dark mode by default. (5/26/24)
 			<br>
 			RCKSTR html port finished (5/25/24)
