--- a/news.html
+++ b/news.html
@@ -5,84 +5,64 @@
     <title>RCKSTR x EthanDupe</title>
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <style type="text/css" media="screen">
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+          * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
 
-        body {
-            background-color: #2c2c2c;
-            color: #f4f4f4;
-        }
+body {
+    background-color: black; /*changed, old was tacky*/
+    color: #f4f4f4;
+}
 
-        div#banner {
-            position: fixed;
-            top: 0;
-            left: 0;
-            background-color: #000000;
-            width: 100%;
-            z-index: 1000;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
 
-        div#banner-content {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 10px;
-            color: white;
-            text-align: center;
-            font-size: 20px;
-        }
+div#main-content {
+    padding-top: 70px;
+    text-align: center;
+    padding: 20px;
+}
 
-        div#main-content {
-            padding-top: 70px;
-            text-align: center;
-            padding: 20px;
-        }
+.button_container {
+        color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 25px 25px; /* Increased padding at the top */
+    background: linear-gradient(45deg, #FFD700, #000);
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+}
 
-        .button_navigation {
-            background-color: #4a4a4a;
-            border: none;
-            color: #f4f4f4;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 18px;
-            margin: 10px;
-            cursor: pointer;
-            border-radius: 12px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+.button_navigation {
+    background-color: black; /* black background */
+    border: 2px solid #FFD700; /* Increased border size */
+    padding: 15px 32px; 
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 12px;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-        .button_navigation:hover {
-            background-color: #6a6a6a;
-            transform: translateY(-2px);
-        }
-
-        .button_container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 20px 0;
-            background-color: #2c2c2c;
-            margin-bottom: 20px;
-        }
+.button_navigation:hover {
+    background: linear-gradient(45deg, #000, #FFD700);
+    color: white; /* Changed from font-color */
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
+}
 
         
     </style>
 </head>
 <body>
-    <div id="banner">
-        <div id="banner-content">
-            RCKSTR - The best games hub for school
-        </div>
-    </div>
-    <div id="main-content">
         <div class='button_container'>
             <button onclick="goto('games')" class='button_navigation'>Games</button>
             <button onclick='goto("home")' class='button_navigation'>Home</button>
@@ -92,17 +72,15 @@
             <button onclick='goto("discord")' class='button_navigation'>Discord</button>
 			<button onclick='goto("ethandupe")' class='button_navigation'>Ethandupe</button>
         </div>
-		<div>
-			Update log: 
-			<br>
-			Made the themes reflect the RCKSTR logo (5/29/24)
-			<br>
-			Made the banner universal and made dark mode by default. (5/26/24)
-			<br>
-			RCKSTR html port finished (5/25/24)
-			
-		</div>
-    </div>
+<div>
+	Update log: 
+	<br>
+	Made the themes reflect the RCKSTR logo (5/29/24)
+	<br>
+	Made the banner universal and made dark mode by default. (5/26/24)
+	<br>
+	RCKSTR html port finished (5/25/24)			
+</div>
     <script src="./scripts/navigation.js"></script>
 </body>
 </html>
