--- a/news.html
+++ b/news.html
@@ -58,6 +58,11 @@ div#main-content {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
 }
+.news_container {
+	max-width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
+}
 
         
     </style>
@@ -72,7 +77,7 @@ div#main-content {
             <button onclick='goto("discord")' class='button_navigation'>Discord</button>
 			<button onclick='goto("ethandupe")' class='button_navigation'>Ethandupe</button>
         </div>
-<div>
+<div class="news_container">
 	Update log: 
 	<br>
 	Made the themes reflect the RCKSTR logo (5/29/24)
