--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@ div#main-content {
         <button onclick="goto('discord')" class="button_navigation">Discord</button>
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
-    <div class="intro_container">
-        <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
-    </div>
-         <body>
+   <div class="intro_container" style="margin-bottom: 20px;">
+    <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+</div>
+<body>
     <div class="offerings_container">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
     </div>
+</body>
     <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Email: rckstr@altmails.com</p>
     <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Discord: <a href="https://discord.gg/2Fw5sz9MQs" style="color: #FFD700;">https://discord.gg/2Fw5sz9MQs</a></p>
     <script src="./scripts/navigation.js"></script>
