trying to center align welcome message

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ div#main-content {
         <button onclick="goto('discord')" class="button_navigation">Discord</button>
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
-   <div class="intro_container" style="margin-bottom: 20px;">
+   <div class="intro_container" style="margin-bottom: 20px;" align="center">
     <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
 </div>
 <body>
