--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ div#main-content {
     <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
 </div>
 <body>
-    <div class="offerings_container">
+    <div class="offerings_container" style="margin-bottom: 50px;">
         <p style="font-size: 35px;">We offer the interstellar project, The ultraviolet project, and games!</p>
     </div>
 </body>
