made offering font smaller

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ div#main-content {
 
 .offerings_container {
     display: flex;
+        font-size: 14px;
     justify-content: center;
     align-items: center;
 }
