--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ div#main-content {
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
     </div>
    <div class="intro_container" style="margin-bottom: 20px;" align="center">
-    <h1 style="font-size: 30px;" align="center;">Welcome to RCKSTR x Ethandupe, an open source project made by USLdesigns, Ethandupe, and theskid22</h1>
+    <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1> 
+       <h2>An open source project developed and maintained by USLDesigns, Ethandupe, and theskid22</h2>
 </div>
 <body>
     <div class="offerings_container" style="margin-bottom: 50px;">
