fixed weird alignment issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ div#main-content {
    <div class="intro_container" style="margin-bottom: 20px;" align="center">
     <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1> 
 </div>
-        <h2>An open source project developed and maintained by USLDesigns, Ethandupe, and theskid22</h2>
+        <h2 style="font-size: 25px;" align="center">An open source project developed and maintained by USLDesigns, Ethandupe, and theskid22</h2>
 <body>
     <div class="offerings_container" style="margin-bottom: 50px;">
         <p style="font-size: 20px;">We offer the interstellar project, The ultraviolet project, and games!</p>
