--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ div#main-content {
         <button onclick="goto('news')" class="button_navigation">News</button>
         <button onclick="goto('discord')" class="button_navigation">Discord</button>
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
+        <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
+
     </div>
    <div class="intro_container" style="margin-bottom: 15px;" align="center">
     <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1> 
