--- a/header.html
+++ b/header.html
@@ -1,1 +1,10 @@
-
+<div class="button_container">
+        <button onclick="goto('home')" class="button_navigation">Home</button>
+        <button onclick="goto('games')" class="button_navigation">Games</button>
+        <button onclick="goto('star')" class="button_navigation">Star</button>
+        <button onclick="goto('about')" class="button_navigation">About</button>
+        <button onclick="goto('news')" class="button_navigation">News</button>
+        <button onclick="goto('discord')" class="button_navigation">Discord</button>
+        <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
+        <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
+    </div>
