tried to mirror header

--- a/games.html
+++ b/games.html
@@ -67,15 +67,7 @@ div#main-content {
 <body>
 
 
-        <div class='button_container'>
-            <button onclick="goto('games')" class='button_navigation'>Games</button>
-            <button onclick='goto("home")' class='button_navigation'>Home</button>
-            <button onclick='goto("star")' class='button_navigation'>Star</button>
-            <button onclick='goto("about")' class='button_navigation'>About</button>
-            <button onclick='goto("news")' class='button_navigation'>News</button>
-            <button onclick='goto("discord")' class='button_navigation'>Discord</button>
-	    <button onclick='goto("ethandupe")' class='button_navigation'>Ethandupe</button>
-    </div>
+ <iframe src="header.html" style="width: 100%; height: 150px; border: none;"></iframe>
 	<div class='games_container' >
 	<a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>
     <br>
