--- a/games.html
+++ b/games.html
@@ -66,9 +66,9 @@ div#main-content {
 </head>
 <body>
 
+<!--#include virtual="header.html" -->
 
- <iframe src="header.html" style="width: 100%; height: 150px; border: none;"></iframe>
-	<div class='games_container' >
+	
 	<a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>
     <br>
     <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a>
