--- a/index.html
+++ b/index.html
@@ -70,18 +70,12 @@
             align-items: center;
         }
     </style>
+    <script src="loadContent.js" defer></script>
+    <script src="./scripts/navigation.js" defer></script>
 </head>
 <body>
-    <div class="button_container">
-        <button onclick="goto('home')" class="button_navigation">Home</button>
-        <button onclick="goto('games')" class="button_navigation">Games</button>
-        <button onclick="goto('star')" class="button_navigation">Star</button>
-        <button onclick="goto('about')" class="button_navigation">About</button>
-        <button onclick="goto('news')" class="button_navigation">News</button>
-        <button onclick="goto('discord')" class="button_navigation">Discord</button>
-        <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
-        <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
-    </div>
+    <div id="header"></div> <!-- Placeholder for header content -->
+
     <div class="intro_container" style="margin-bottom: 15px;" align="center">
         <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1>
     </div>
@@ -89,8 +83,7 @@
     <div class="offerings_container" style="margin-bottom: 50px;">
         <p style="font-size: 20px;">We offer the interstellar project, The ultraviolet project, and games!</p>
     </div>
-    <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Email: rckstr@altmails.com</p>
-    <p style="font-size: 35px; display: flex; justify-content: center; align-items: center;">Discord: <a href="https://discord.gg/2Fw5sz9MQs" style="color: #FFD700;">https://discord.gg/2Fw5sz9MQs</a></p>
-    <script src="./scripts/navigation.js"></script>
+
+    <div id="footer"></div> <!-- Placeholder for footer content -->
 </body>
 </html>
