--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
     <script src="./scripts/navigation.js" defer></script>
 </head>
 <body>
-    <div id="header"></div> <!-- Placeholder for header content -->
+    <div class="button_container">
+    <button onclick="goto('home')" class="button_navigation">Home</button>
+    <button onclick="goto('games')" class="button_navigation">Games</button>
+    <button onclick="goto('star')" class="button_navigation">Star</button>
+    <button onclick="goto('about')" class="button_navigation">About</button>
+    <button onclick="goto('news')" class="button_navigation">News</button>
+    <button onclick="goto('discord')" class="button_navigation">Discord</button>
+    <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
+    <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
+</div>
+
 
     <div class="intro_container" style="margin-bottom: 15px;" align="center">
         <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1>
